--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             </div>
         </nav>
 
-        <div class="mx-auto flex flex-col-reverse lg:flex-row lg:ml-[135px] lg:mx-0">
+        <div class="mx-auto flex flex-col-reverse lg:flex-row lg:ml-[auto] lg:mx-0">
             <div class="mx-auto mt-[-60px] sm:mt-0 lg:mt-[35px]">
                 <iframe class="w-full max-w-[500px] h-[282px] sm:max-w-full sm:w-[600px] sm:h-[370px]" frameborder="0"
                     src="https://www.youtube.com/embed/1D8_hcVvNd0" allowfullscreen="true"></iframe>
@@ -187,7 +187,7 @@
             </div>
         </div>
 
-        <div class="mx-auto flex flex-col lg:flex-row lg:ml-[135px] lg:mx-0">
+        <div class="mx-auto flex flex-col lg:flex-row lg:ml-[auto] lg:mx-0">
             <div
                 class="w-full max-w-[500px] h-auto mx-auto mt-[50px] lg:mt-[-5px] sm:max-w-full sm:w-[600px] lg:mr-[25px]">
                 <p class="font-russo-one text-4xl font-bold p-[15px] bg-[#d1cbc2] text-[#303643] mb-0 mt-5">KICK FLIP
@@ -204,7 +204,7 @@
             </div>
         </div>
 
-        <div class="mx-auto flex flex-col-reverse lg:flex-row lg:ml-[135px] lg:mx-0">
+        <div class="mx-auto flex flex-col-reverse lg:flex-row lg:ml-[auto] lg:mx-0">
             <div class="mx-auto mt-[-30px] sm:mt-0">
                 <iframe class="w-full max-w-[500px] h-[282px] sm:max-w-full sm:w-[600px] sm:h-[370px]" frameborder="0"
                     src="https://www.youtube.com/embed/IG8vVbe4AkM" allowfullscreen="true"></iframe>
